// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterLabelConfidenceContent /> should render with no data 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "analysis.zvi-label-detection",
        "type": "labelConfidence",
        "values": Object {
          "labels": Array [],
          "max": 1,
          "min": 0,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "analysis.zvi-label-detection",
          "type": "labelConfidence",
          "values": Object {
            "labels": Array [],
            "max": 1,
            "min": 0,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Confidence Score:
     
    N/A
  </div>,
  .emotion-2 {
  padding: 16px;
  padding-bottom: 32px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-1 {
  padding: 4px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <span>
        0.00
      </span>
      <span>
        1.00
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <Slider
        domain={
          Array [
            0,
            1,
          ]
        }
        isDisabled={true}
        isMuted={false}
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.01}
        values={
          Array [
            0,
            1,
          ]
        }
      />
    </div>
  </div>,
  .emotion-1 {
  padding-bottom: 16px;
}

.emotion-0 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-1"
  >
    <input
      aria-label="Filter labels"
      className="emotion-0"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  font-style: italic;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Predictions
       Selected:
       
      0
    </div>
    <div>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      PREDICTION
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    className="emotion-0"
  />,
]
`;

exports[`<FilterLabelConfidenceContent /> should select a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "analysis.zvi-label-detection",
        "type": "labelConfidence",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "analysis.zvi-label-detection",
          "type": "labelConfidence",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Confidence Score:
     
    N/A
  </div>,
  .emotion-2 {
  padding: 16px;
  padding-bottom: 32px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-1 {
  padding: 4px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <span>
        0.00
      </span>
      <span>
        1.00
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <Slider
        domain={
          Array [
            0,
            1,
          ]
        }
        isDisabled={true}
        isMuted={false}
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.01}
        values={
          Array [
            0,
            1,
          ]
        }
      />
    </div>
  </div>,
  .emotion-1 {
  padding-bottom: 16px;
}

.emotion-0 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-1"
  >
    <input
      aria-label="Filter labels"
      className="emotion-0"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  font-style: italic;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Predictions
       Selected:
       
      0
    </div>
    <div>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      PREDICTION
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-32 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  width: 100%;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover,
.emotion-7.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  width: 100%;
  border-top: 4px solid #808080;
}

.emotion-1 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-left: 8px;
}

.emotion-8 {
  width: 56%;
  border-top: 4px solid #808080;
}

.emotion-9 {
  height: 4px;
  width: 44%;
  border-top: 1px solid #3b3b3b;
}

.emotion-16 {
  width: 42%;
  border-top: 4px solid #808080;
}

.emotion-17 {
  height: 4px;
  width: 58%;
  border-top: 1px solid #3b3b3b;
}

.emotion-24 {
  width: 34%;
  border-top: 4px solid #808080;
}

.emotion-25 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

<ul
    className="emotion-32"
  >
    <li>
      <button
        aria-label="web_site"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              web_site
            </div>
            <div
              className="emotion-4"
            >
              134
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="alp"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-9"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              alp
            </div>
            <div
              className="emotion-4"
            >
              75
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="sports_car"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-16"
            />
            <div
              className="emotion-17"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              sports_car
            </div>
            <div
              className="emotion-4"
            >
              56
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="menu"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-24"
            />
            <div
              className="emotion-25"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              menu
            </div>
            <div
              className="emotion-4"
            >
              45
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;

exports[`<FilterLabelConfidenceContent /> should select a label 2`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "analysis.zvi-label-detection",
        "type": "labelConfidence",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "analysis.zvi-label-detection",
          "type": "labelConfidence",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Confidence Score:
     
    N/A
  </div>,
  .emotion-2 {
  padding: 16px;
  padding-bottom: 32px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-1 {
  padding: 4px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <span>
        0.00
      </span>
      <span>
        1.00
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <Slider
        domain={
          Array [
            0,
            1,
          ]
        }
        isDisabled={true}
        isMuted={false}
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.01}
        values={
          Array [
            0,
            1,
          ]
        }
      />
    </div>
  </div>,
  .emotion-1 {
  padding-bottom: 16px;
}

.emotion-0 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-1"
  >
    <input
      aria-label="Filter labels"
      className="emotion-0"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value="web"
    />
  </div>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  font-style: italic;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Predictions
       Selected:
       
      0
    </div>
    <div>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      PREDICTION
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-8 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  width: 100%;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover,
.emotion-7.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  width: 100%;
  border-top: 4px solid #808080;
}

.emotion-1 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-left: 8px;
}

<ul
    className="emotion-8"
  >
    <li>
      <button
        aria-label="web_site"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              web_site
            </div>
            <div
              className="emotion-4"
            >
              134
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;

exports[`<FilterLabelConfidenceContent /> should unselect a label 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "analysis.zvi-label-detection",
        "type": "labelConfidence",
        "values": Object {
          "labels": Array [
            "web_site",
          ],
          "max": 1,
          "min": 0,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "analysis.zvi-label-detection",
          "type": "labelConfidence",
          "values": Object {
            "labels": Array [
              "web_site",
            ],
            "max": 1,
            "min": 0,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding-top: 8px;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Confidence Score:
     
    All
  </div>,
  .emotion-2 {
  padding: 16px;
  padding-bottom: 32px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-1 {
  padding: 4px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      <span>
        0.00
      </span>
      <span>
        1.00
      </span>
    </div>
    <div
      className="emotion-1"
    >
      <Slider
        domain={
          Array [
            0,
            1,
          ]
        }
        isDisabled={false}
        isMuted={false}
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.01}
        values={
          Array [
            0,
            1,
          ]
        }
      />
    </div>
  </div>,
  .emotion-1 {
  padding-bottom: 16px;
}

.emotion-0 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

<div
    className="emotion-1"
  >
    <input
      aria-label="Filter labels"
      className="emotion-0"
      onChange={[Function]}
      placeholder="Filter labels"
      type="search"
      value=""
    />
  </div>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  font-style: italic;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Predictions
       Selected:
       
      1
    </div>
    <div>
      <button
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Select All
      </button>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

<div
    className="emotion-0"
  >
    <div>
      PREDICTION
    </div>
    <div>
      COUNT
    </div>
  </div>,
  .emotion-32 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  width: 100%;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover,
.emotion-15.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-6 {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

.emotion-3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4 {
  padding-left: 8px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #0074f538;
  width: 100%;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7:hover,
.emotion-7.focus-visible:focus {
  background-color: #0074f538;
  color: #ffffff;
}

.emotion-0 {
  width: 0%;
  border-top: 4px solid #73b61c;
}

.emotion-1 {
  height: 4px;
  width: 100%;
  border-top: 1px solid #3b3b3b;
}

.emotion-8 {
  width: 0%;
  border-top: 4px solid #808080;
}

<ul
    className="emotion-32"
  >
    <li>
      <button
        aria-label="web_site"
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-0"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              web_site
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="alp"
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              alp
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="sports_car"
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              sports_car
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
    <li>
      <button
        aria-label="menu"
        className="emotion-15"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-8"
            />
            <div
              className="emotion-1"
            />
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-3"
            >
              menu
            </div>
            <div
              className="emotion-4"
            >
              0
            </div>
          </div>
        </div>
      </button>
    </li>
  </ul>,
]
`;
